--- a/cm/res/AndroidManifest.xml
+++ b/cm/res/AndroidManifest.xml
@@ -46,6 +46,7 @@
                 android:label="@string/permlab_modifyNetworkSettings"
                 android:description="@string/permdesc_modifyNetworkSettings"
                 android:icon="@drawable/ic_launcher_cyanogenmod"
+                androidprv:allowViaWhitelist="true"
                 android:protectionLevel="signature|privileged" />
 
     <!-- Allows an app to make changes to the interruption mode sound settings -->
@@ -184,7 +185,8 @@
     <permission android:name="cyanogenmod.permission.LIVE_LOCK_SCREEN_MANAGER_ACCESS_PRIVATE"
                 android:label="@string/permlab_accessLiveLockScreenServicePrivate"
                 android:description="@string/permdesc_accessLiveLockScreenServicePrivate"
-                android:protectionLevel="signature|privileged" />
+                android:protectionLevel="signature|privileged"
+                androidprv:allowViaWhitelist="true" />
 
     <!-- Permission required to be held for a service that provides a LiveLockScreenManagerService
         @hide -->
@@ -224,7 +226,8 @@
     <permission android:name="cyanogenmod.permission.MANAGE_AUDIO_SESSIONS"
                 android:label="@string/permlab_manage_audio_sessions"
                 android:description="@string/permdesc_manage_audio_sessions"
-                android:protectionLevel="signature|privileged" />
+                android:protectionLevel="signature|privileged"
+                androidprv:allowViaWhitelist="true" />
 
     <!-- Allows an application to access the weather service.
         <p>Although the protection is normal, this permission should be required ONLY by those apps
